--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="chichilo.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="menuchichilo.html">Menu</a></li>
             <li><a href="contactochichilo.html">Contacto</a></li>
         </ul>
